# addon-manager

./: Cargo.toml  LICENSE  Readme.md
src/: addon.rs  lib.rs  main.rs
src/addon/: manifest.rs  world_packet_list.rs
src/addon/manifest/: version.rs
src/commands/: install.rs  list.rs  remove.rs
