[package]
name = "addon-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
anyhow = "1.0.86"
serde_jsonc = "1.0.108"
serde_json = "1.0.127"
zip = "2.2.0"
thiserror = "1.0.63"
semver = "1.0.23"
prettytable-rs = "0.10.0"
console = "0.15.8"
tempfile = "3.12.0"
copy_dir = "0.1.3"